[package]
name = "death_god_logging_tool"
version = "4.1.3"
edition = "2021"
description = "My awesome lovelly logging. With colors and code links. (Настройка логирования с навигацией по коду)"
license = "GPL-3.0-only"


[lib]
name = "death_god_logging_tool"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.93"
chrono = "0.4"
colored = "2"
flexi_logger = "0.28.5"
log = "0.4"
libc = "0.2"
tokio = { version = "1.39.2", features = ["full"]}

